feat: parameterize versions, adopt current versions
other than a change to the CLI patch, everything appears to work